Not!Thai reskinned
name and stuffs

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -403,7 +403,7 @@
  shaantin_pirate_haven_of_ki_laan: "Ki'Laan Pirate Haven"
  shaantin_pirate_haven_of_ki_laan_desc: "To many merchants, the pirates operating from the coastal town of Ki'Laan are an everlasting menace, raiding anyone that even comes close to their area of operation. Thankfully, many of those freebooters are willing to work in the service of the Zhuquan, often avoiding attackin the pilgrims and domestic merchants."
  shaantin_crossroad_of_peoples: "Crossroad of Peoples"
- shaantin_crossroad_of_peoples_desc: "Most of the travellers reaching Shaantin come from very distant lands. People of Tsutan, Khemdan, Okukaiga, Heisean and Aiunusu come here to witness the glory of the holy mountain and the exorbant luxuries founded around it. This made our people much more open to foreigners, taking a very calculated approach to diplomacy."
+ shaantin_crossroad_of_peoples_desc: "Most of the travellers reaching Shaantin come from very distant lands. People of Tsutan, Dinh-Tong, Okukaiga, Heisean and Aiunusu come here to witness the glory of the holy mountain and the exorbant luxuries founded around it. This made our people much more open to foreigners, taking a very calculated approach to diplomacy."
  shaantin_peacock_army: "Peacock Army"
  shaantin_peacock_army_desc: "Bulghaenian seizure of our northern coast quickly brought with it a need to militarize the society and prepare it for the coming storm. Sons of many lords were taught military strategy and tactics in order to repell the invaders. The new army was often called the Peacock army, taking the name after the great Wong Huung-Tseuk."
  shaantin_taantsau: "Taantsau"
