--- a/localisation/TD_01_flavour_khemdan_l_english.yml
+++ b/localisation/TD_01_flavour_khemdan_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
  jaanpagna_reform: "Jaanpagna"
  jaanpagna_reform_desc: "Holy monarchy of Phraguna tries to unite and balance strong noble caste with meritocratic recruitment."
- pagtaan_oligarchy_reform: "Pagtaan Oligarchy"
- pagtaan_oligarchy_reform_desc: "Vast majority of nobility in Pagtaan nations is deeply involved in trading with foreigners."
+ pagtaan_oligarchy_reform: "Tsaenahm Oligarchy"
+ pagtaan_oligarchy_reform_desc: "The Tsaenahm nations are known for their expertise in shipbuilding and mercantilism."
  nragan_society_reform: "Nragan Society"
- nragan_society_reform_desc: "Tribal nations of Khemdan maintain a strong sense of unity, even despite religious differences."
+ nragan_society_reform_desc: "Tribal nations of Dinh-Tong maintain a strong sense of unity, even despite religious differences."
 
- PHAKHAN: "Phakhan"
- PHAKH: "Phahk"
- PHAKHMEN: "Phakhmen"
+ PHAKHAN: "Phao" #Clan
+ PHAKH: "Thao" #Lord
+ PHAKHMEN: "Sao" #Sovereign
 
  nragan_group_ideas: "Nragan Minor Ideas"
  nragan_group_ideas_bonus: "Nragan Minor Ambition"
