--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -862,6 +862,8 @@
  siviav_area: "Siviav"
  phuhuk_area: "Phuhuk"
  pemtitik_area: "Pemtitik"
+ phankgar_area: "Hub Suea"
+ thidin_nhu_area: "Lai Ruen"
 
  nteviav_area: "Nteviav"
  nasrupatyaka_area: "Nasrupatyaka"
@@ -872,20 +874,21 @@
  tainkyuat_area: "Tainkyuat"
 
  mahjipang_area: "Mahjipang"
- glechao_area: "Glechao"
- khepeing_area: "Khepeing"
- thamdana_area: "Thamdana"
- phaenthua_area: "Phaenthua"
- khuwran_area: "Khuwran"
- siangenao_area: "Siangenao"
- phomkan_area: "Phomkan"
+ glechao_area: "Mengsaw"
+ khepeing_area: "Khobpha"
+ thamdana_area: "Pak Keo"
+ phaenthua_area: "Phaensuth"
+ khuwran_area: "Khuwlaan"
+ siangenao_area: "Hatkhao"
+ phomkan_area: "Kwaannan"
  leuang_thalay_area: "Leuang Thalay"
- hntaigu_area: "Hntaigu"
+ hntaigu_area: "Changramhai"
  hnyunbi_area: "Hnyunbi"
  dawbiav_area: "Dawbiav"
- xabliaj_area: "Xabliaj"
- pemubtus_area: "Pemubtus"
+ xabliaj_area: "Pom Hin"
+ pemubtus_area: "Paakiao"
  thajan_area: "Thajan"
+ snahim_area: "Snamsiao"
 
  chnpi_isles_area: "Chnpi Isles"
  chit_isles_area: "Chit Isles"
