--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -451,8 +451,8 @@
 
  prakaani_group: "Prakaani"
  wongkaan: "Wongkaan"
- pagtaan: "Pagtaan"
- huajon: "Huajon"
+ pagtaan: "Tsaenahm"
+ huajon: "Huanngeon"
 
  nragan_group: "Nragan"
  kaanam: "Kaanam"
