--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -86,7 +86,7 @@
  tivappu_region: "Tivappu"
  maisetra_region: "Maisetra"
  okukaiga_region: "Okukaiga"
- khemdan_region: "Khemdan"
+ khemdan_region: "Dinh-Tong"
  pasmangala_region: "Pasmangala"
  bkuslcuht_region: "Bkuslcuht" 
  aiunusu_region: "Aiunusu"
