--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -89,7 +89,7 @@
  tivappu_tradenode: "Parhali"
  okukaiga_tradenode: "Okukaiga"
  toishima_tradenode: "Toishima"
- khemdan_tradenode: "Khemdan"
+ khemdan_tradenode: "Dinh-Tong"
  pasmangala_tradenode: "Pasmangala"
  akuariri_tradenode: "Akuariri"
  byumgbag_tradenode: "Byumgbag"
