--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1149,8 +1149,8 @@
  MAJ_ADJ: "Mahjipangi"
  KHM: "Khaamgan"
  KHM_ADJ: "Khaamgani"
- KHW: "Khuwran"
- KHW_ADJ: "Khuwrani"
+ KHW: "Khuwlaan"
+ KHW_ADJ: "Khuwlaani"
  SIA: "Siangen"
  SIA_ADJ: "Siangeni"
  KHO: "Khombun"
@@ -1159,8 +1159,8 @@
  NAA_ADJ: "Naangari"
  NTA: "Ntaig"
  NTA_ADJ: "Ntaigi"
- PHO: "Phomkan"
- PHO_ADJ: "Phomkani"
+ PHO: "Heuan Khwaan"
+ PHO_ADJ: "Heuan Khwaani"
  TAU: "Tauglaj"
  TAU_ADJ: "Tauglaji"
  VIO: "Viasnom"
@@ -1175,8 +1175,8 @@
  KAM_ADJ: "Kaumceian"
  XTA: "Xtangun"
  XTA_ADJ: "Xtanguni"
- LIA: "Liajnragana"
- LIA_ADJ: "Liajnragani"
+ LIA: "Lai Hung Reung"
+ LIA_ADJ: "Lai Hung Reung"
  PGN: "Pagnyachada"
  PGN_ADJ: "Pagnyachadi"
  RAY: "Raykaamar"
