--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -142,7 +142,7 @@
  caidthmor_nation_title: "Unite Caidthmor @CAT"
  caidthmor_nation_desc: "The Lands known now only to few as Caidthmor have never been truly unified. Only when the Argenian invaders began pushing local kingdoms up north many rulers fled to the only remaining realm - Nabhin. Now that Argenia is defeated, we may claim the legacy of this forgotten realm."
 
- liajnragana_nation_title: "Unite Khemdan @LIA"
+ liajnragana_nation_title: "Unite Dinh-Tong @LIA"
  liajnragana_nation_desc: "We always were pushed into the inhospitable jungles because of our weakness. Now it is time to reclaim our lands."
 
  pagnyachada_nation_title: "Proclaim the Northern Domain @PGN"
