i cant sleep so theres imperial loc

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -16,13 +16,13 @@
  emperor_reorganize_the_treasury_emperor: "Reorganized the Treasury"
  emperor_reorganize_the_treasury_emperor_per_prince: "Reorganized the Treasury"
  emperor_reorganize_the_treasury_elector_per_prince: "Reorganized the Treasury"
- emperor_reorganize_the_treasury_desc: "The Empire is in desperate need of reformation. The first step is to fill the imperial coffers.\n---"
+ emperor_reorganize_the_treasury_desc: "The Empire is in desperate need of reformation, but to support such actions we need to acquire funds. Because of that our first step will be reorganizing of the tax code in the entire Empire allowing for more efficient tithe collecting also allowing us to funnel greater quantities of these funds straight into our treasury.\n---"
 
  emperor_reinforce_imperial_borders_title: "Reinforce Borders of the Empire" 
  emperor_reinforce_imperial_borders: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of the Empire"
- emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFortify Border§!\" province button\nUnlocks \"§YReform the Dauerschütze§!\" decision\nUnlocks \"§YPrinces in the Army§!\" decision\n---"
+ emperor_reinforce_imperial_borders_desc: "For too long Empire relied solely on Emperors forces and occasional local armies, only by securing the exposed frontiers of the Empire we can guarantee stability across it. Formation of an Imperial Army and giving Emperor powers to build new fortifications in marches will be a good start.\n---\nUnlocks \"§YFortify Border§!\" province button\nUnlocks \"§YReform the Dauerschütze§!\" decision\nUnlocks \"§YPrinces in the Army§!\" decision\n---"
  demand_additional_levies_title: "Demand Additional Levies"
  demand_additional_levies_desc: "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
  saelian.2.t: "Emperor demands an additional levy"
@@ -31,7 +31,7 @@
  saelian.2.b: "That demand lies beyond our contract."
  emperor_unify_imperial_infrastructure_title: "Unify the Infrastructure"
  emperor_unify_imperial_infrastructure: "Unified Infrastructure"
- emperor_unify_imperial_infrastructure_desc: "Bringing the Empire closer economically will surely help its political situation.\n---\nUnlocks \"§YExpand Via Caroli§!\" decision\nUnlocks \"§YExpand Via Magreini§!\" decision\n---"
+ emperor_unify_imperial_infrastructure_desc: "Keeping up with everything inside our lands can take too long when posessing such vast territories, renovating old infrastructure and constructing new one will not only make it easier to bring entire Empire closer but will also help us develop these areas further. Keeping these roads functional will also allow our troops from Imperial Army to react faster to threats across our many borders.\n---\nUnlocks \"§YExpand Via Caroli§!\" decision\nUnlocks \"§YExpand Via Magreini§!\" decision\n---"
  emperor_unify_imperial_infrastructure_province: "Unified Infrastructure" 
  expand_via_caroli_title: "Expand Via Caroli"
  expand_via_caroli_desc: "Built by Emperor Carol III, is the second longest road in the Empire. It stretches from city of Merkast in the west, through Orenburg, Rotzwasch, Hegenstadt, Pratzau, Rogau, to city of Dorschau in the east."
@@ -43,7 +43,7 @@
  
  emperor_establish_permanent_parliament_title: "Establish Permanent Diet"
  emperor_establish_permanent_parliament: "Permanent Diet Established"
- emperor_establish_permanent_parliament_desc: "Permanent diet will make diplomacy inside The Empire much smoother.\n---\nUnlocks \"§YImperial Palace§!\" great project\n---\n§YReduces Imperial Diet Cooldown to 5 years§!\n---\n"
+ emperor_establish_permanent_parliament_desc: "All these people cause a lot of problems that are hard to solve when we don't have any codified way to deal with them. Establishment of a Permanent Diet will allow us to solve issues that might have been overlooked by already busy imperial bureaucrats.\n---\nUnlocks \"§YImperial Palace§!\" great project\n---\n§YReduces Imperial Diet Cooldown to 5 years§!\n---\n"
  saelian.1.t: "Choosing the Place of the Diet"
  saelian.1.d: ""
  saelian.1.a: "Imperial Capital it is."
@@ -53,7 +53,7 @@
  emperor_expand_diplomatic_reach_title: "Expand The Legatorum"
  emperor_expand_diplomatic_reach: "Expanded Legatorum"
  emperor_expand_diplomatic_reach_emperor: "Expanded Legatorum"
- emperor_expand_diplomatic_reach_desc: "Legates are important to imperial interest, being our envoys abord and bringing important information to the Emperor.\n---\nUnlocks \"§YFabricate Casus Belli§!\" diplomatic action\n---"
+ emperor_expand_diplomatic_reach_desc: "Legates are important to imperial interest, being our envoys aboard and bringing important information to the Emperor. That institution might be expanded with additional rights and privileges which would result in greater prestige on international scene and granting better insight into other states.\n---\nUnlocks \"§YFabricate Casus Belli§!\" diplomatic action\n---"
  fabricate_casus_belli_title: "Fabricate Insult"
  fabricate_casus_belli_tooltip: "Fabricate Insult which will grant us Casus Belli against target country."
  fabricate_casus_belli_desc: "This will cost us §R[ROOT.GetHowMuchDipCost]§! diplomatic power and will lower targeted country's opinion of us. We Will gain §YDiplomatic Insult§! Casus Belli."
@@ -61,7 +61,7 @@
  emperor_revive_imperial_inquisition_title: "Revive Imperial Inquisition"
  emperor_revive_imperial_inquisition_province: "Revived Imperial Inquisition"
  emperor_revive_imperial_inquisition: "Revived Imperial Inquisition"
- emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§YEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
+ emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity. If we want to have any chance to combat heresies or rebellions against our authority we need to revive this institution.\n---\nUnlocks \"§YEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
  investigate_heresy_emperor_title: "Investigate Heresy"
  investigate_heresy_emperor_tooltip: "Investigate heresy in their court, demanding them to return to true ways."
  investigate_heresy_emperor_desc: "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
@@ -71,51 +71,51 @@
  emperor_establish_proper_bureaucracy_title: "Establish Proper Bureaucracy"
  emperor_establish_proper_bureaucracy: "Established Proper Bureaucracy"
  emperor_establish_proper_bureaucracy_province: "Established Proper Bureaucracy"
- emperor_establish_proper_bureaucracy_desc: "To ensure safety from inside threat, imperial representatives will govern lands of our princes.\n---\n"
+ emperor_establish_proper_bureaucracy_desc: "Local princes govern their lands and rule over them however they want. Not always they do it in the most efficient ways, we will force them to work with our selected imperial representatives to fix their inefficiencies.\n---\n"
 
  emperor_enforce_imperial_will_title: "Enforce Imperial Will"
  emperor_enforce_imperial_will: "Enforced Imperial Will"
  emperor_enforce_imperial_will_emperor: "Enforced Imperial Will"
  emperor_enforce_imperial_will_province: "Enforced Imperial Will"
- emperor_enforce_imperial_will_desc: "Decisions of the Emperor were taken for granted for too long. Now everything the Vicarius says will be enforced as a law.\n---\nGives casus-belli on non-members bordering the Empire to force them to join the Empire.\n---\n"
+ emperor_enforce_imperial_will_desc: "Emperor and his decisions were often taken at most as jokes with their effects being nonexistant unless he enforced them himself. But now everything the Vicarius says will be enforced by imperial officials as a law.\n---\nGives casus-belli on non-members bordering the Empire to force them to join the Empire.\n---\n"
  
  emperor_unify_courts_title: "Unify Courts"
  emperor_unify_courts: "Unified Courts"
  emperor_unify_courts_emperor: "Unified Courts"
- emperor_unify_courts_desc: "Courts are backbone of Imperial Law System, therefore they are the first target of Imperial Unification.\n---\n"
+ emperor_unify_courts_desc: "Courts are backbone of Imperial Law System, therefore having them all disunited cause a lot of problems with enacting laws across our Empire. We will unite them and give new responsibilies so their decisions will be taken everywhere.\n---\n"
 
  emperor_establish_standing_army_title: "Establish Standing Army"
  emperor_establish_standing_army: "Established Standing Army"
  emperor_establish_standing_army_emperor_per_prince: "Established Standing Army"
- emperor_establish_standing_army_desc: "If the Empire wants to reform into a modern state, it requires a modern army.\n---\n"
+ emperor_establish_standing_army_desc: "One of the problems of our current Imperial Army is that its too disunited with some powers still laying with local princes, instead of taking them away and risking them rebelling we will just increase their contributions to us allowing to establish a new standing Imperial Army.\n---\n"
  
  emperor_curtail_princely_power_title: "Curtain Princely Power"
  emperor_curtail_princely_power: "Curtailed Princely Power"
  emperor_curtail_princely_power_emperor: "Curtailed Princely Power"
- emperor_curtail_princely_power_desc: "Imperial Unification is imminent. This step helps us secure our Empire against particularists.\n---\n"
+ emperor_curtail_princely_power_desc: "With most of imperial bureaucracy and offices in our hands there remains only one obstacle in our way, princes. Now they cannot stand against our authority to strip their extensive rights and privileges.\n---\n"
  
  emperor_appoint_local_chancellors_title: "Appoint Local Chancellors"
- emperor_appoint_local_chancellors_desc: "Chancellors selected by the emperor will overseer and support princes in their local affairs.\n---\n"
+ emperor_appoint_local_chancellors_desc: "Despite our Diet and local officials princes still are left to themselves when arguing about local affairs. Appointments of Chancellors will allow us to have more insight and control into those issues.\n---\n"
  emperor_appoint_local_chancellors_emperor: "Appointed Local Chancellors"
 
  emperor_expand_city_rights_title: "Expand City Rights"
- emperor_expand_city_rights_desc: "Expanding the urban population will bring us and our subjects prosperity.\n---\n§YFound Towns§! action will grant additional §G1§! Random development point per province\n---\n"
+ emperor_expand_city_rights_desc: "Our most loyal and productive subjects are those in the cities, by expanding our urban centers we will bring greater prosperity to the Empire and strengthen our loyalists.\n---\n§YFound Towns§! action will grant additional §G1§! Random development point per province\n---\n"
  emperor_expand_city_rights_emperor: "Expanded City Rights"
 
  emperor_strengthen_religious_unity_title: "Strengthen Religious Unity"
- emperor_strengthen_religious_unity_desc: "We must strengthen the backbone of our civilization - shared religious identity.\n---\nGives casus-belli on non-members bordering the Empire to force them to join the Empire.\n---\n"
+ emperor_strengthen_religious_unity_desc: "At the backbone of our civilization there is one thing - our faith, Sigilian faith. To ensure further existence of it we need to strengthen this feeling across it, not allowing any doubt or envy tear us apart.\n---\nGives casus-belli on non-members bordering the Empire to force them to join the Empire.\n---\n"
  emperor_strengthen_religious_unity_elector: "Strengthened Religious Unity"
 
  emperor_appease_local_governments_title: "Appease Local Governments"
- emperor_appease_local_governments_desc: "By appeasing our subjects we can buy their loyalty for future.\n---\n"
+ emperor_appease_local_governments_desc: "Empires only stand when their population is loyal, state that keeps its population unhappy is a state that will collapse in a future. Only by furthering our efforts to improve standing with all subjects of the Empire we can prevent us from that demise.\n---\n"
 
  emperor_proclaim_religious_unity_title: "Proclaim Religious Unity"
- emperor_proclaim_religious_unity_desc: "New age of the empire is coming with all of its members more unified than ever.\n---\nEnables forcing countries to become §YImperial Prince§! subjects.\n---\n"
+ emperor_proclaim_religious_unity_desc: "New age of the Empire is coming, with its brave sigilian population, united working hand in hand on the fields towards brighter future. Shoulder to shoulder against all enemies of the Empire trying to destroy us.\n---\nEnables forcing countries to become §YImperial Prince§! subjects.\n---\n"
  emperor_proclaim_religious_unity_member: "Proclaimed Religious Unity"
  
  emperor_unite_empire_title: "Unite The Empire"
  emperor_unite_empire: "United The Empire"
- emperor_unite_empire_desc: "Let the new Imperial Golden Age begin!\n---\n"
+ emperor_unite_empire_desc: "We were at the bring of collapse with inefficient structure, allowing corrupt and opportunist princes to dictate what we should and we shouldn't. But these days are long gone, with all of the power in Emperor we can enter a new age... \nThe new Imperial Golden Age!\n---\n"
 
  Demand_Levy: "Demand Levy"
  TD_Imperial_Decree1_tooltip: "Demand Additional Levy from our subjects"
