--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -287,6 +287,8 @@
  luetan_naval_resurgence: "Naval Resurgence"
  luetan_naval_resurgence_desc: "River barges have made it easy to traverse vast amounts of resources quickly compared to using pack animals or carriages, allowing for expanded trade and travel all across the land. While in the past our ancestors once sailed on the coasts of Tsutan, their knowledge has still come useful further inland and perhaps in the future we will sail the waves once more."
 
+ northern_xifang_sect_mod: "Xifang Temples"
+ desc_northern_xifang_sect_mod: "Followers of Xifang spiritualism in Pinshau are very resistant to conversion, partially thanks to various privileges granted to them by the Lords of Bulghaen."
  bulghaen_ideas: "Bulghen Ideas"
  bulghaen_ideas_bonus: "Bulghen Ambition"
  bulghaen_ideas_start: "Bulghen Traditions"
