more culture for pragtaan

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -453,6 +453,8 @@
  wongkaan: "Wongkaan"
  pagtaan: "Tsaenahm"
  huajon: "Huanngeon"
+ hlaiipha: "Hlaiipha"
+ konmeng: "Konmeng"
 
  nragan_group: "Nragan"
  kaanam: "Kaanam"
