--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -17,7 +17,7 @@
  meritocratic_monarchy_reform: "Meritocratic Monarchy"
  meritocratic_monarchy_reform_desc: "This form of monarchy integrates elements of the Huljiming philosophy to achieve the most skilled court possible."
  huangche_regime_reform: "Huangche Regime"
- huangche_regime_reform_desc: "People of Huangche maintain high control over their population to keep everything in order."
+ huangche_regime_reform_desc: "Originating in the bureaucratic realm of Lam, the government known as Huangche regime is used to effectively control the population thanks to the use of frequent censuses and professional bureaucrats."
  hengtuan_autocracy_reform: "Hengtuan Autocracy"
  hengtuan_autocracy_reform_desc: "Danshu philosophy, which encourages hierarchical rule with a single Zhuquan at the top, found a fertile ground in various power hungry warlords of the east, easing the consolidation of power."
  luetan_monarchy_reform: "Luetan Monarchy"
@@ -25,7 +25,7 @@
  beidao_alliance_reform: "Beidao Alliance"
  beidao_alliance_reform_desc: "Cities of northern Henling formed a tight alliance with a single electable leader to protect against northern hordes and southern regimes."
  tszelapsheng_reform: "Tshelapsheng"
- tszelapsheng_reform_desc: "Eastern Tsutan was historically compromised of various city-states of which only 2 survived to this day, keeping the tradition of commerce and maritime influence."
+ tszelapsheng_reform_desc: "Profiting greatly from maritime trade across the great sea allowed the Tsutan city-states to consolidate their surrounding"
  kaansuentin_reform: "Kaansuentin"
  kaansuentin_reform_desc: "Huangchan theocracies justify their rule as heavenly blessing - rules are chosen by magic prophecies."
  gajifeng_chiefdom_reform: "Gajifeng Chiefdom"
