--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2622,11 +2622,11 @@
  PROV2621: "Yaiwila"
  PROV2622: "Bowopirekreii"
  PROV2623: "Bowopirekreii"
- PROV2624: "Lamhoi Coast"
+ PROV2624: "Moongman Coast"
  PROV2625: "Tapawira"
  PROV2626: "Tataiwabuasa"
  PROV2627: "Iwikuiiebe"
- PROV2628: "Laamen Sea"
+ PROV2628: "Laamen Strait"
  PROV2629: "Itaiebe"
  PROV2630: "Iwacutapitara"
  PROV2631: "Capicapa"
@@ -2636,13 +2636,13 @@
  PROV2635: "Akakrapitiwa"
  PROV2636: "Kawa"
  PROV2637: "Bakikreicaya"
- PROV2638: "Daimin Strait"
+ PROV2638: "Kwaangian Bay"
  PROV2639: "Paau Sea"
  PROV2640: "Radoriasan Rainforest"
- PROV2641: "South Laamen Sea"
- PROV2642: "Zoeng Straits"
+ PROV2641: "Yauhau Straits"
+ PROV2642: "Hatkhao Bay"
  PROV2643: "Mahkahosa"
- PROV2644: "Pagtaan Sea"
+ PROV2644: "Tsaenahm Coast"
  PROV2645: "Wacuwira"
  PROV2646: "Iraetarona"
  PROV2647: "Ehuuebi"
@@ -2655,7 +2655,7 @@
  PROV2654: "Iira"
  PROV2655: "Wanaapake"
  PROV2656: "Simenawica"
- PROV2657: "Huanghan Coast"
+ PROV2657: "2657"
  PROV2658: "Hungcho Bay"
  PROV2659: "Guang Strait"
  PROV2660: "Yukukiyucama"
@@ -2664,7 +2664,7 @@
  PROV2663: "Sacematehi"
  PROV2664: "Pekloximlere"
  PROV2665: "Kadinipi"
- PROV2666: "Coast of Yau"
+ PROV2666: "Pinshau Coast"
  PROV2667: "Tawoparu"
  PROV2668: "Capimckabur"
  PROV2669: "Nuyemari"
@@ -2678,12 +2678,12 @@
  PROV2677: "Kisepuatai"
  PROV2678: "Maxpuari"
  PROV2679: "Yottohoyri"
- PROV2680: "Posalan Coast"
+ PROV2680: "2680"
  PROV2681: "Central Tsinhoi Gulf"
- PROV2682: "Kwokuen Sea"
+ PROV2682: "2682"
  PROV2683: "Horcktehoyri"
  PROV2684: "Moltepahni"
- PROV2685: "Shauseng Coast"
+ PROV2685: "Kwokuen Sea"
  PROV2686: "Tipahukula"
  PROV2687: "Manakutiuku"
  PROV2688: "Atakuma"
@@ -2718,7 +2718,7 @@
  PROV2717: "2717"
  PROV2718: "Sagz"
  PROV2719: "Sarikul"
- PROV2720: "Akaokan Coast"
+ PROV2720: "2720"
  PROV2721: "Mukshaya"
  PROV2722: "Spargit"
  PROV2723: "Ata"
@@ -2768,7 +2768,7 @@
  PROV2767: "Cannikax"
  PROV2768: "Datodacurrara"
  PROV2769: "Uttuakul"
- PROV2770: "Yukisakan Coast"
+ PROV2770: "Tohian Bay"
  PROV2771: "Kucuskunnuhunu"
  PROV2772: "Hokwehekisi"
  PROV2773: "Kicmasikunnuhunu"
@@ -2787,8 +2787,8 @@
  PROV2786: "Cetxwistaces"
  PROV2787: "Southern Nankai Sea"
  PROV2788: "Akscismex"
- PROV2789: "Northern Nankai Sea"
- PROV2790: "Oamai Sea"
+ PROV2789: "Shishen Coast"
+ PROV2790: "2790"
  PROV2791: "Yucxstaces"
  PROV2792: "Tarwemeer"
  PROV2793: "Azumagan Coast"
@@ -2981,7 +2981,7 @@
  PROV2980: "Tsaanyaak"
  PROV2981: "Nutagak"
  PROV2982: "Apuntuuk"
- PROV2983: "Sarakhani Coast"
+ PROV2983: "2983"
  PROV2984: "Kitchak"
  PROV2985: "Nanukin"
  PROV2986: "Piayaak"
@@ -3083,7 +3083,7 @@
  PROV3082: "Chaparra"
  PROV3083: "Western Farigan Sea"
  PROV3084: "Ranjskhora"
- PROV3085: "Likuruman Bay"
+ PROV3085: "3085"
  PROV3086: "Sukiran"
  PROV3087: "Sahnkar"
  PROV3088: "Jihgnari"
@@ -3100,7 +3100,7 @@
  PROV3099: "Sursurthan"
  PROV3100: "Pantta"
  PROV3101: "Baghsit"
- PROV3102: "Western Kadapsuo Sea"
+ PROV3102: "3102"
  PROV3103: "Kurapuj"
  PROV3104: "Chutya"
  PROV3105: "Jambural"
@@ -3171,7 +3171,7 @@
  PROV3170: "Khekhnar"
  PROV3171: "3171"
  PROV3172: "3172"
- PROV3173: "Kadapsuo Sea"
+ PROV3173: "3173"
  PROV3174: "Tsenkhuvaagdal"
  PROV3175: "Tövtsöl"
  PROV3176: "Ulankhuvaagdal"
