map 17 (big one)

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -404,6 +404,7 @@
  lansenli: "Lansenli"
  tsakung: "Tsakung"
  bujiun: "Bujiun"
+ landan: "Landan"
 
  east_hengtuan_group: "Tsinhoi"
  beidao: "Beidao"
