--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -71,14 +71,14 @@
  paredesh_tradenode: "Sursurthan"
  bugtang_tradenode: "Haenam Gulf"
  weixiao_tradenode: "Tövdov"
- henling_coast_tradenode: "Henling Coast"
+ henling_coast_tradenode: "Henlen Gulf"
  xilei_tradenode: "Beimen"
  eoduunso_tradenode: "Eoduunso"
  heisean_tradenode: "Yeolbada"
  caizhu_tradenode: "Caizhu"
  huangchan_tradenode: "Paau"
  xun_tradenode: "Densheng"
- zoeng_straits_tradenode: "Zoeng Straits"
+ zoeng_straits_tradenode: "Prakaani Bay"
  hungcho_tradenode: "Hungcho"
  rygkun_tradenode: "Rygkun"
  janma_tradenode: "Janma"
@@ -89,7 +89,7 @@
  tivappu_tradenode: "Parhali"
  okukaiga_tradenode: "Okukaiga"
  toishima_tradenode: "Toishima"
- khemdan_tradenode: "Dinh-Tong"
+ khemdan_tradenode: "Phabnetsa"
  pasmangala_tradenode: "Pasmangala"
  akuariri_tradenode: "Akuariri"
  byumgbag_tradenode: "Byumgbag"
