--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1039,3 +1039,7 @@
  engara_area: "Engara"
  biyada_area: "Biyada"
  ciidcas_area: "Ciidcas"
+
+ vutmo_area: "Vutmo"
+ kwaangkei_area: "Kwaangkei"
+ 
